--- a/Cachorros/CelulaCustomizadaCachorro/CelulaCustomizadaCachorroTableViewCell.xib
+++ b/Cachorros/CelulaCustomizadaCachorro/CelulaCustomizadaCachorroTableViewCell.xib
@@ -1,40 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="152" id="KGk-i7-Jjw" customClass="CelulaCustomizadaCachorroTableViewCell" customModule="Cachorros" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="452" height="152"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="CelulaCustomizadaCachorroTableViewCell" customModule="Cachorros" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="315" height="150"/>
+            <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="452" height="152"/>
+                <rect key="frame" x="0.0" y="0.0" width="315" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="beI-73-jZi">
-                        <rect key="frame" x="16" y="24" width="105" height="105"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGL-zz-vlq">
-                        <rect key="frame" x="129" y="64" width="303" height="24"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yB0-0g-qoh">
+                        <rect key="frame" x="16" y="11" width="283" height="128"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vr1-xF-HyN">
+                                <rect key="frame" x="8" y="12" width="105" height="105"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="105" id="DLR-fV-IuH"/>
+                                    <constraint firstAttribute="height" constant="105" id="mgY-eV-BKZ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lnH-2N-pcT">
+                                <rect key="frame" x="121" y="54" width="139" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                        <constraints>
+                            <constraint firstItem="vr1-xF-HyN" firstAttribute="leading" secondItem="yB0-0g-qoh" secondAttribute="leading" constant="8" id="0T1-M6-oRl"/>
+                            <constraint firstAttribute="trailing" secondItem="lnH-2N-pcT" secondAttribute="trailing" constant="23" id="3TO-ES-HE2"/>
+                            <constraint firstItem="lnH-2N-pcT" firstAttribute="leading" secondItem="vr1-xF-HyN" secondAttribute="trailing" constant="8" symbolic="YES" id="6zc-xE-KKN"/>
+                            <constraint firstItem="lnH-2N-pcT" firstAttribute="top" secondItem="yB0-0g-qoh" secondAttribute="top" constant="54" id="FVm-vg-rWf"/>
+                            <constraint firstAttribute="bottom" secondItem="vr1-xF-HyN" secondAttribute="bottom" constant="11" id="Hb8-VX-aqU"/>
+                            <constraint firstItem="vr1-xF-HyN" firstAttribute="top" secondItem="yB0-0g-qoh" secondAttribute="top" constant="12" id="QvP-94-E6K"/>
+                            <constraint firstAttribute="bottom" secondItem="lnH-2N-pcT" secondAttribute="bottom" constant="53" id="WH0-ve-Xiy"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="yB0-0g-qoh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4Zc-oD-i4B"/>
+                    <constraint firstAttribute="bottom" secondItem="yB0-0g-qoh" secondAttribute="bottom" constant="11" id="87D-pc-Zds"/>
+                    <constraint firstItem="yB0-0g-qoh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="jx3-ww-ZQr"/>
+                    <constraint firstAttribute="trailing" secondItem="yB0-0g-qoh" secondAttribute="trailing" constant="16" id="ygc-21-3A7"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
             <connections>
-                <outlet property="uiiv_Image" destination="beI-73-jZi" id="n67-za-XYP"/>
-                <outlet property="uil_Titulo" destination="KGL-zz-vlq" id="Rwv-mR-HFr"/>
+                <outlet property="cardView" destination="yB0-0g-qoh" id="jgi-c3-Kt3"/>
+                <outlet property="uiiv_Image" destination="vr1-xF-HyN" id="OuA-Mg-uSj"/>
+                <outlet property="uil_Titulo" destination="lnH-2N-pcT" id="grl-ic-Bnr"/>
             </connections>
-            <point key="canvasLocation" x="172.46376811594203" y="8.7053571428571423"/>
+            <point key="canvasLocation" x="-658.39999999999998" y="-186.20689655172416"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
