--- a/Base.lproj/LaunchScreen.storyboard
+++ b/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,35 +15,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="OY6-Id-uww">
-                                <rect key="frame" x="84" y="157" width="207" height="207"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DogPedia " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="74" translatesAutoresizingMaskIntoConstraints="NO" id="jvt-c7-XkS">
-                                        <rect key="frame" x="0.0" y="0.0" width="207" height="89"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
-                                        <color key="textColor" systemColor="systemBrownColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dogLaunchScreen02" translatesAutoresizingMaskIntoConstraints="NO" id="15A-yD-1Ix">
-                                        <rect key="frame" x="0.0" y="118" width="207" height="89"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="89" id="T0y-16-nXU"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dogLaunchScreen02" translatesAutoresizingMaskIntoConstraints="NO" id="rFU-IA-sbx">
+                                <rect key="frame" x="66" y="74" width="244" height="244"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="OY6-Id-uww" secondAttribute="height" multiplier="1:1" id="lAy-OC-Z3Y"/>
-                                    <constraint firstItem="15A-yD-1Ix" firstAttribute="top" secondItem="jvt-c7-XkS" secondAttribute="bottom" constant="29" id="qMu-Ui-1zi"/>
+                                    <constraint firstAttribute="width" secondItem="rFU-IA-sbx" secondAttribute="height" multiplier="1:1" id="RwB-qp-YIn"/>
                                 </constraints>
-                            </stackView>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.60274440760000003" green="0.76316852390000001" blue="0.80995315310000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.93499392270000004" green="0.5160545111" blue="0.21129226679999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="OY6-Id-uww" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" id="3VR-oN-sOV"/>
-                            <constraint firstItem="OY6-Id-uww" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="147" id="9y6-2z-Mpx"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="OY6-Id-uww" secondAttribute="bottom" constant="313" id="KKn-CD-B9S"/>
-                            <constraint firstAttribute="trailing" secondItem="OY6-Id-uww" secondAttribute="trailing" constant="20" id="N5Z-S2-8wA"/>
+                            <constraint firstItem="rFU-IA-sbx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="74" id="9QO-7X-HNt"/>
+                            <constraint firstItem="rFU-IA-sbx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="66" id="AAe-0x-1so"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rFU-IA-sbx" secondAttribute="bottom" constant="349" id="Qpo-z2-Y1t"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rFU-IA-sbx" secondAttribute="trailing" constant="65" id="fOW-yU-vdG"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -54,9 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="dogLaunchScreen02" width="512" height="512"/>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="dogLaunchScreen02" width="341.5" height="341.5"/>
     </resources>
 </document>
